# vk_voxel_engine

./: .gitignore  Cargo.toml  README.md  build.rs  graph_stats.py
res/shaders/: debug.glsl  test.glsl  world_solid.glsl
src/: main.rs
src/application/: app.rs  input_handler.rs  mod.rs  ticker.rs  window.rs
src/core/: engine.rs  mod.rs  util.rs
src/core/event/: event_bus.rs  mod.rs
src/core/renderer/: camera.rs  command_buffer.rs  forward_renderer.rs  framebuffer.rs  graphics_manager.rs  graphics_pipeline.rs  image_view.rs  material.rs  mesh.rs  mesh_data.rs  mod.rs  render_component.rs  render_pass.rs  renderer.rs  scene_renderer.rs  shader.rs  texture.rs  voxel_renderer.rs
src/core/renderer/render_pass/: deferred_renderer.rs  mod.rs
src/core/scene/: bounds.rs  mod.rs  scene_manager.rs  transform.rs  voxel_world.rs
src/core/scene/world/: chunk_loader.rs  chunk_manager.rs  mod.rs  noise.rs  voxel_world.rs  world_generator.rs
src/core/ui/: gui_frame_graph.rs  gui_renderer.rs  mod.rs
src/core/util/: mod.rs
src/util/: mod.rs
