[package]
name = "vk_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
glam = "0.30.4"
log = "0.4.27"
png = "0.17.16"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.6.2"
sdl3 = { version = "0.14.33", features = [ "ash", "raw-window-handle" ] }
thiserror = "2.0.12"
tobj = "4.0.3"
vulkano = "0.35.1"
#ash = "0.38.0"
smallvec = "1.15.1"

#[profile.dev]
#opt-level = 1 