[package]
name = "vk_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
glam = "0.30.4"
log = "0.4.27"
png = "0.17.16"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.6.2"
sdl3 = { version = "0.14.33", features = [ "ash", "raw-window-handle" ] }
thiserror = "2.0.12"
tobj = "4.0.3"
ash = "0.38.0"
vulkano = { version = "0.35.1", features = ["default"] }
smallvec = "1.15.1"
shaderc = "0.9.1"
foldhash = "=0.1.5"
crossbeam = "0.8.4"
shrev = "1.1.3"
#hecs = "0.10.5"
bevy_ecs = "0.16.1"
rayon = "1.10.0"
#shipyard = "0.8.1"
#tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "sync", "macros" ] }

[build]
rustflags = [ "-Ctarget-feature=+avx2" ]

#[profile.dev]
#opt-level = 1

[profile.release]
opt-level = 3
overflow-checks = false
#lto = "fat"
#codegen-units = 1
#debug = true
#panic = "abort"
lto = "thin"
codegen-units = 16
debug = false
panic = "unwind"